Made file handling more stable and portable.

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -5,7 +5,7 @@ PROJECT (common)
 #######################################
 SET (common_SRCS
                     CommonTypes.h
-    FilePattern.cxx	FilePattern.h
+                	FilePattern.h
     FileSet.cxx		FileSet.h
     Logger.cxx      Logger.h
     StopWatch.cxx   StopWatch.h
