Added a filter for computing the mean of a set of vector images.  Vector pixel types do not always play well with generic filter classes, like itk::NaryFunctorImageFilter.

--- a/filters/CMakeLists.txt
+++ b/filters/CMakeLists.txt
@@ -24,6 +24,7 @@ SET (Filters_SRCS
                             Gaussian2DVectorFilter.h
                             GaussianFunctionImageFilter.h
                             NaryMeanImageFilter.h
+                            NaryMeanVectorImageFilter.h
                             NaryVarianceImageFilter.h
                             RegistrationMotionFilter.h
                             WarpImageErrorFilter.h
