Added two programs; one to simulate partial occlusions and the other to compare two image sequences that are presumed to be similar. These are for evaluation of digital lens cleaning.

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -23,6 +23,12 @@ TARGET_LINK_LIBRARIES(meanrepair ITFilters)
 ADD_EXECUTABLE(localrepair TestNeighborhoodAttenuationRepair.cxx)
 TARGET_LINK_LIBRARIES(localrepair ITFilters ITImage)
 
+ADD_EXECUTABLE(modulate ModulateImages.cxx)
+TARGET_LINK_LIBRARIES(modulate ITFilters ITImage)
+
+ADD_EXECUTABLE(compare CompareVideos.cxx)
+TARGET_LINK_LIBRARIES(compare ITFilters ITImage)
+
 ADD_EXECUTABLE(meanvector AverageVectorImages.cxx)
 TARGET_LINK_LIBRARIES(meanvector ITCommon ITImage ITFilters)
 
