Some new files that supported image comparison for CVPR paper.

--- a/filters/CMakeLists.txt
+++ b/filters/CMakeLists.txt
@@ -41,6 +41,8 @@ SET (Filters_SRCS
                             NaryVarianceImageFilter.h
                             NonZeroLog10ImageFilter.h
                             PadFunctorImageFilter.h
+                            PeakSNRImageToImageMetric.h
+                            PercentileImageMetric.h
                             Power10ImageFilter.h
                             itkRealToComplexImageFilter.h
                             RegistrationMotionFilter.h
