The most recent version of ITK changed NaryFunctorImageFilter to use std::vectors as input instead of itk's vector.

--- a/filters/CMakeLists.txt
+++ b/filters/CMakeLists.txt
@@ -1,4 +1,6 @@
-
+#######################################
+# Filters are typically custom extensions to the ITK classes.
+#######################################
 PROJECT (Filters)
 
 #######################################
