Added DataSource, which encapsulates ImageSets and handles different input data types.  Added a base class for ImageSetReader that can be used to generically handle input data.  Changed ImageSetReader to cast output data type using an image adapter.

--- a/image/CMakeLists.txt
+++ b/image/CMakeLists.txt
@@ -6,6 +6,7 @@ PROJECT (image)
 ##############################
 
 SET (image_SRCS
+    DataSource.cxx                  DataSource.h
     FileSetImageReader.cxx          FileSetImageReader.h
                                     ImageSetReader.h
                                     ImageUtils.h
