Added new dialogs to project.

--- a/wxGui/CMakeLists.txt
+++ b/wxGui/CMakeLists.txt
@@ -6,23 +6,29 @@ PROJECT (gui)
 INCLUDE (../LocalUsewxWidgets.cmake)
 
 SET (Gui_SRCS
+    AboutDialog.cpp                             AboutDialog.h
     CLGOpticFlowDialog.cxx                      CLGOpticFlowDialog.h
-    DataSource.cxx                              DataSource.h
+    DataSourceDialog.cpp                        DataSourceDialog.h
     DoubleSlider.cxx                            DoubleSlider.h
     wxDoubleSlider.cxx                          wxDoubleSlider.h
     FileSetDialog.cxx                           FileSetDialog.h
     GlobalRegistrationDialog.cxx                GlobalRegistrationDialog.h
+    GuiUtils.cxx                                GuiUtils.h
     HarrisFeatureDialog.cxx                     HarrisFeatureDialog.h
     ImageTracker.cpp                            ImageTracker.h
+    ImageTrackerController.cxx                  ImageTrackerController.h
     ImageViewer.cxx                             ImageViewer.h
+                                                ItkVtkPipeline.h
     wxIntSlider.cxx                             wxIntSlider.h
     LoggerPanel.cxx                             LoggerPanel.h
-    MultiResolutionRegistrationDialog.cxx	MultiResolutionRegistrationDialog.h
+    MultiResolutionRegistrationDialog.cpp	MultiResolutionRegistrationDialog.h
     RegistrationDesign_wdr.cpp                  RegistrationDesign_wdr.h
+    RemoveOcclusionsDialog.cpp                  RemoveOcclusionsDialog.h
+    ScalarImageItkVtkPipeline.cxx               ScalarImageItkVtkPipeline.h
     wxCore_wdr.cpp                              wxCore_wdr.h
     wxGui.rc
 )
 
 # A library, so others can use the GUI tools
 ADD_LIBRARY(ITGui ${Gui_SRCS})
-TARGET_LINK_LIBRARIES(ITGui ITCommon ITAlgorithms ITView )
+TARGET_LINK_LIBRARIES(ITGui ITCommon ITAlgorithms ITPipelines ITView )
