Added ApplyTransformsPipeline, which applies a set of transforms to a set of files.  Helpful for aligning images whose registration info comes from a different color channel.

--- a/pipelines/CMakeLists.txt
+++ b/pipelines/CMakeLists.txt
@@ -5,6 +5,7 @@
 PROJECT (Pipelines)
 
 SET (Pipelines_SRCS
+    ApplyTransformsPipeline.cxx             ApplyTransformsPipeline.h
     RemovePartialOcclusionsPipeline.cxx     RemovePartialOcclusionsPipeline.h
 )
 
