Added apply transform dialog, which applies a set of transforms from one registration to another set of images. Added log level selection to menu. Fixed some null pointers.

--- a/wxGui/CMakeLists.txt
+++ b/wxGui/CMakeLists.txt
@@ -7,6 +7,7 @@ INCLUDE (../LocalUsewxWidgets.cmake)
 
 SET (Gui_SRCS
     AboutDialog.cpp                             AboutDialog.h
+    ApplyTransformDialog.cpp                    ApplyTransformDialog.h
     CLGOpticFlowDialog.cpp                      CLGOpticFlowDialog.h
     DataSourceDialog.cpp                        DataSourceDialog.h
     DoubleSlider.cxx                            DoubleSlider.h
