Added some math functions (exp2, log2) for Windows builds only.  Added platform-specific directory delimiters.

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -8,6 +8,7 @@ SET (common_SRCS
                 	FilePattern.h
     FileSet.cxx		FileSet.h
     Logger.cxx      Logger.h
+					MathUtils.h
     StopWatch.cxx   StopWatch.h
 )
 
