Implemented Horn & Schunck optical flow computation. Consequently found an error in the CLG flow computation.  Added a Harris corner feature interest image filter.

--- a/filters/CMakeLists.txt
+++ b/filters/CMakeLists.txt
@@ -42,6 +42,9 @@ SET (Filters_SRCS
                             itkFFTWComplexToComplexImageFilter.h
                             Gaussian2DVectorFilter.h
                             GaussianFunctionImageFilter.h
+                            HarrisFeatureInterestImageFilter.h
+                            HornOpticalFlowImageFilter.h
+                            HornOpticalFlowIterativeStepImageFilter.h
                             LocalContrastImageFilter.h
                             ModulateRegionImageFilter.h
                             NaryMeanImageFilter.h
