Added pipeline to support H&S optical flow computation.

--- a/pipelines/CMakeLists.txt
+++ b/pipelines/CMakeLists.txt
@@ -6,6 +6,7 @@ PROJECT (Pipelines)
 
 SET (Pipelines_SRCS
     ApplyTransformsPipeline.cxx             ApplyTransformsPipeline.h
+    HornOpticalFlowPipeline.cxx             HornOpticalFlowPipeline.h
     RemovePartialOcclusionsPipeline.cxx     RemovePartialOcclusionsPipeline.h
 )
 
