Moved CLG optical flow and multi-res registration into pipeline framework.  Made all pipelines provide periodic progress updates.

--- a/pipelines/CMakeLists.txt
+++ b/pipelines/CMakeLists.txt
@@ -6,9 +6,11 @@ PROJECT (Pipelines)
 
 SET (Pipelines_SRCS
     ApplyTransformsPipeline.cxx             ApplyTransformsPipeline.h
+    CLGOpticFlowPipeline.cxx                CLGOpticFlowPipeline.h
     HornOpticalFlowPipeline.cxx             HornOpticalFlowPipeline.h
     ItkPipeline.cxx                         ItkPipeline.h
                                             ItkPipelineObserver.h
+    MultiResolutionRegistrationPipeline.cxx MultiResolutionRegistrationPipeline.h
     RemovePartialOcclusionsPipeline.cxx     RemovePartialOcclusionsPipeline.h
     TextPipelineObserver.cxx                TextPipelineObserver.h
 )
