Added a PipelineExecutor, which launches itk pipelines on new threads.  Testing for multiresolution registration--compiles, but does not work.

--- a/wxGui/CMakeLists.txt
+++ b/wxGui/CMakeLists.txt
@@ -23,6 +23,7 @@ SET (Gui_SRCS
     wxIntSlider.cxx                             wxIntSlider.h
     LoggerPanel.cxx                             LoggerPanel.h
     MultiResolutionRegistrationDialog.cpp	MultiResolutionRegistrationDialog.h
+    PipelineExecutor.cxx                        PipelineExecutor.h
     RegistrationDesign_wdr.cpp                  RegistrationDesign_wdr.h
     RemoveOcclusionsDialog.cpp                  RemoveOcclusionsDialog.h
     ScalarImageItkVtkPipeline.cxx               ScalarImageItkVtkPipeline.h
