Added a platform-dependent Mutex class for controlling resource access accross threads outside the framework of ITK or wxWidgets.  Made Logger thread safe using mutex locking. Enforced sorting of newly loaded image files. Fixed progress dialog deletion problem by using the C++ delete operator instead of the wxWidget's Destroy() method, which may fail depending on whether the progress dialog was canceled or not.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,16 @@ INCLUDE_DIRECTORIES(${VTK_INCLUDE_DIRS})
 LINK_DIRECTORIES(${VTK_LIBRARY_DIRS})
 
 #######################################
+# Handle threading libraries
+#######################################
+FIND_PACKAGE(Threads)
+IF (CMAKE_USE_PTHREADS_INIT)
+    ADD_DEFINITIONS(-DIT_USE_PTHREADS)
+ELSEIF (CMAKE_USE_WIN32_THREADS_INIT)
+    ADD_DEFINITIONS(-DIT_USE_WIN32_THREADS)
+ENDIF(CMAKE_USE_PTHREADS_INIT)
+
+#######################################
 # Personal filter library and support classes.
 #######################################
 INCLUDE_DIRECTORIES (
