--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -5,10 +5,12 @@ PROJECT (common)
 #######################################
 SET (common_SRCS
                     CommonTypes.h
-                	FilePattern.h
-    FileSet.cxx		FileSet.h
+                    FilePattern.h
+    FileSet.cxx     FileSet.h
     Logger.cxx      Logger.h
-					MathUtils.h
+                    MathUtils.h
+    Mutex.cxx       Mutex.h
+    MutexLocker.cxx MutexLocker.h
     StopWatch.cxx   StopWatch.h
 )
 
