Added a pipeline for flow field integration (does not work yet).  Updated logging in partial occlusion removal to debug why the image results seem different after adding pipeline progress information.

--- a/pipelines/CMakeLists.txt
+++ b/pipelines/CMakeLists.txt
@@ -8,6 +8,7 @@ SET (Pipelines_SRCS
     ApplyTransformsPipeline.cxx             ApplyTransformsPipeline.h
     CLGOpticFlowPipeline.cxx                CLGOpticFlowPipeline.h
     HornOpticalFlowPipeline.cxx             HornOpticalFlowPipeline.h
+    IntegrateFlowFieldPipeline.cxx          IntegrateFlowFieldPipeline.h
     ItkPipeline.cxx                         ItkPipeline.h
                                             ItkPipelineObserver.h
     MultiResolutionRegistrationPipeline.cxx MultiResolutionRegistrationPipeline.h
