Added a Gaussian-smoothing gradient computation filter.

--- a/filters/CMakeLists.txt
+++ b/filters/CMakeLists.txt
@@ -43,6 +43,7 @@ SET (Filters_SRCS
                             itkFFTWComplexToComplexImageFilter.h
                             Gaussian2DVectorFilter.h
                             GaussianFunctionImageFilter.h
+                            GaussianGradientImageFilter.h
                             HarrisFeatureInterestImageFilter.h
                             HornOpticalFlowImageFilter.h
                             HornOpticalFlowIterativeStepImageFilter.h
