Created a generic multi resolution optical flow framework, which uses any filter that extends OpticalFlowImageFilter.

--- a/filters/CMakeLists.txt
+++ b/filters/CMakeLists.txt
@@ -49,6 +49,7 @@ SET (Filters_SRCS
                             HornOpticalFlowIterativeStepImageFilter.h
                             LocalContrastImageFilter.h
                             ModulateRegionImageFilter.h
+                            MultiResolutionOpticalFlowMethod.h
                             NaryMeanImageFilter.h
                             NaryMeanVectorImageFilter.h
                             NaryMedianImageFilter.h
