Added smart image caching to ImageSetReader--the reader keeps all images within a user-set radius in memory, and discards others.  This is to enable more efficient temporal filtering while still supporting large data sets.

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -37,6 +37,9 @@ TARGET_LINK_LIBRARIES(meanrepair ITFilters)
 ADD_EXECUTABLE(localrepair TestNeighborhoodAttenuationRepair.cxx)
 TARGET_LINK_LIBRARIES(localrepair ITFilters ITImage)
 
+ADD_EXECUTABLE(testread TestImageSetReader.cxx)
+TARGET_LINK_LIBRARIES(testread ITCommon ITImage ITFilters)
+
 ADD_EXECUTABLE(compare CompareVideos.cxx)
 TARGET_LINK_LIBRARIES(compare ITFilters ITImage)
 
